[package]
name = "CLINews"
version = "0.1.1"
edition = "2021"
authors = ["LucaaDev"]

[dependencies]
crossterm = "0.27.0"
dotenv = "0.15.0"
termimad = "0.29.2"
tokio = {version = "1.37.0", features = ["full"] }
serde = {version = "1.0.201", features = ["derive"]}
ureq = "2.9.7"
serde_json = "1.0.117"
colour = "0.6.0"
thiserror = "1.0.60"
